tests/NormalTests/paczka1/small_fuzzy/21176651.err
Error in line 11: A992 A110 67,4
Error in line 5: qKXWiNZ A95 57,7
